--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 /* imports font from fonts.google */
+
+
+:root{
+    --primary-color: #0891B2;
+}
 body{
     font-family: 'Montserrat', 'sans-serif';
 }
@@ -13,3 +18,27 @@ body{
     max-width: 600px;
     margin: auto;
 }
+
+/* links */
+.link{
+    text-decoration:none;
+    padding: 0.5rem 1rem;
+}
+
+.link-primary
+{
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: white;
+
+}
+.link-secondary
+{
+    color: var(--primary-color);
+    border-radius: 0.5rem;
+    border: 1px solid var(--primary-color);
+    
+}
+/* if just padding then it goes top,right,bottom,left and if you just give top,right then top==bottom and left==right*/
+
+/* look into BEM naming convention for CSS */
