projects page added

--- a/styles.css
+++ b/styles.css
@@ -140,3 +140,14 @@ footer{
     font-weight: bold;
     font-size: large;
 }
+/* 
+projects page */
+
+.projects-heading{
+    margin:auto;
+}
+
+.projects-link{
+    border:1rem;
+    margin-top: 10px;
+}
