Revert "style changes css"
This reverts commit b1514006307e95f35f04c77a5a0f0e0efc23c642.

--- a/styles.css
+++ b/styles.css
@@ -31,12 +31,11 @@ body{
 }
 
 .link-primary
-{   box-sizing: border-box;
+{
     background-color: var(--primary-color);
     border-radius: 0.5rem;
-    color: white;   
-    margin-left:395px;
-  
+    color: white;
+
 }
 .link-secondary
 {
@@ -110,7 +109,7 @@ hr{
 section  */
 
 
-.section h1,p {
+.section h1{
     text-align:center;
     padding:2rem;
 }
