--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,15 @@
     --primary-color: #0891B2;
     --dark-grey: #9CA3AF;
     --light-grey: #E2E8F0;
+    
 }
+
 body{
     font-family: 'Montserrat', 'sans-serif';
     margin: 0px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 /* container */
 .container {
@@ -132,7 +137,8 @@ footer{
     border-top-right-radius: 1rem;
     border-top-left-radius:1rem;
     margin-top:5rem;
-    margin-bottom:0rem;
+    margin-bottom:0%;
+    margin-top: auto;
 }
 
 .footer ul{
