--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,9 @@ body{
 /* links */
 .para{
     text-align:center;
+    margin-bottom:20px;
 }
+
 .link{
     text-decoration:none;
     padding: 0.5rem 1rem;
@@ -55,12 +57,11 @@ body{
 .link-section{
     margin-left:23vw;
 }
+
 hr{
     margin: 2rem 0rem;
 }
-.project-link{
 
-}
 /* if just padding then it goes top,right,bottom,left and if you just give top,right then top==bottom and left==right*/
 
 /* look into BEM naming convention for CSS */
